[package]
name = "lb"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "load_balancer"
path = "src/main.rs"

[[bin]]
name = "test_server"
path = "src/test_server.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1.14", features = ["full"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
